--- a/public/assets/css/main.sass
+++ b/public/assets/css/main.sass
@@ -130,11 +130,15 @@
   margin-bottom: 24px
 
 .foot-nav
+  color: #828282
   list-style: none
   margin: 0
-  padding: 0
+  padding: 30px 0 0
+  text-align: center
   > li
     display: inline-block
+    > a
+      color: #484848
 
 .foot-list
   list-style: none
@@ -143,3 +147,11 @@
   > li
     > a
       color: #606060
+
+.foot-pontual
+  margin-bottom: 20px
+
+.foot__bot
+  color: #828282
+  a
+    color: #484848
