--- a/public/index.ejs
+++ b/public/index.ejs
@@ -59,6 +59,9 @@
                                       <select id="" name="">
                                           <option value="">USD</option>
                                           <option value="">BRL</option>
+                                          <option value="">VEF</option>
+                                          <option value="">CNY</option>
+                                          <option value="">GPB</option>
                                       </select>
                                   </div>
                             </div>
@@ -73,8 +76,11 @@
                                   <input type="text" class="form-control" id="" placeholder="0.00" value="3.370">
                                   <div class="input-group-addon">
                                       <select id="" name="">
+                                       <option value="">USD</option>
                                           <option value="">BRL</option>
-                                          <option value="">USD</option>
+                                          <option value="">VEF</option>
+                                          <option value="">CNY</option>
+                                          <option value="">GPB</option>
                                       </select>
                                   </div>
                             </div>
@@ -90,7 +96,7 @@
 
                         <p class="lead">You could save an average of R$91.05 vs your bank.
                             <br />
-                            <a href="">Why?</a>
+                            <a href="">How?</a>
                         </p>
                     </div>
                     <!-- /.col -->
@@ -100,8 +106,8 @@
                         <div class="head-border">
                             <div></div>
                         </div>
-                        <h1>THE CLEVER NEW WAY TO<br /> BEAT BANK FEES</h1>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <h1>THE FASTER AND CHEAPER WAY<br /> TO SEND MONEY</h1>
+                        <p class="lead">Agents and banks charge you steep fees when you send money abroad. With VeloxTransfer you save up to 75%. Great, right?.</p>
                     </div>
                     <!-- /.col -->
                 </div>
