--- a/public/index.ejs
+++ b/public/index.ejs
@@ -59,6 +59,7 @@
                                       <select id="" name="">
                                           <option value="">USD</option>
                                           <option value="">BRL</option>
+                                          <option value="">VEF</option>
                                       </select>
                                   </div>
                             </div>
